syntax = "proto3";

option csharp_namespace = "PreProcessamentoRpc";

service PreProcessamento {
  rpc ProcessarDados (DadosBrutos) returns (DadosProcessados);
}

message DadosBrutos {
  string dados = 1;
  string tipoProcessamento = 2;
}

message DadosProcessados {
  string dados = 1;
}
